export default interface RobotDTO {
  robotCode: string;
  robotDescription: string;
  robotNickname: string;
  robotSerialNumber: string;
  robotTypeName: string;
  enabled: boolean;
}
